# XmlSiteMapper-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  release_packaging.sh
src/: main.rs  terminal_writer.rs  xml_file_writer.rs
src/file_writer/: mod.rs  terminal_writer.rs
src/terminal_writer/: mod.rs
