[package]
name = "bolonini_mapper"
version = "0.1.0"
authors = ["BoloniniD <denis@bolonin.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking"]}
select = "*"
url-normalizer = "0.2.0"
xml-rs = "0.8.4"
chrono = "0.4"